// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component::CompanyReceivedFilter snapshot shows errors 1`] = `
<section
  className="o-expandable aggregation date-filter"
>
  <button
    aria-expanded={true}
    aria-label="Hide The date the CFPB sent the complaint to the company filter"
    className="o-expandable__header"
    onClick={[Function]}
  >
    <h3
      className="o-expandable__label"
    >
      The date the CFPB sent the complaint to the company
    </h3>
    <span
      className="o-expandable__cues"
    >
      <span
        aria-label="Hide"
        className="o-expandable__cue-close"
        role="img"
      >
        <svg>
          minus-round.svg
        </svg>
      </span>
    </span>
  </button>
  <div
    className="o-expandable__content"
  >
    <p />
    <div>
      <ul
        className="date-inputs"
      >
        <li>
          <label
            className="a-label a-label__heading body-copy"
            htmlFor="company_received-from"
          >
            From
          </label>
          <div
            className="o-search-input"
          >
            <div
              className="o-search-input__input"
            >
              <input
                className="a-text-input a-text-input--error"
                id="company_received-from"
                max="2020-05-05"
                min="2011-12-01"
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder="M/D/YYYY"
                type="date"
                value="2016-01-01"
              />
            </div>
          </div>
        </li>
        <li>
          <label
            className="a-label a-label__heading body-copy"
            htmlFor="company_received-through"
          >
            Through
          </label>
          <div
            className="o-search-input"
          >
            <div
              className="o-search-input__input"
            >
              <input
                className="a-text-input a-text-input--error"
                id="company_received-through"
                max="2020-05-05"
                min="2011-12-01"
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder="M/D/YYYY"
                type="date"
                value="2000-01-01"
              />
            </div>
          </div>
        </li>
      </ul>
      <div
        className="a-form-alert a-form-alert--error"
        role="alert"
      >
        <div>
          'From' date must be less than 'through' date
          <span
            aria-hidden="true"
          >
            <svg
              className="cf-icon-svg cf-icon-delete-round"
            >
              error-round.svg
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`component::CompanyReceivedFilter snapshot supports no dates in the Redux Store 1`] = `
<section
  className="o-expandable aggregation date-filter"
>
  <button
    aria-expanded={true}
    aria-label="Hide The date the CFPB sent the complaint to the company filter"
    className="o-expandable__header"
    onClick={[Function]}
  >
    <h3
      className="o-expandable__label"
    >
      The date the CFPB sent the complaint to the company
    </h3>
    <span
      className="o-expandable__cues"
    >
      <span
        aria-label="Hide"
        className="o-expandable__cue-close"
        role="img"
      >
        <svg>
          minus-round.svg
        </svg>
      </span>
    </span>
  </button>
  <div
    className="o-expandable__content"
  >
    <p />
    <div>
      <ul
        className="date-inputs"
      >
        <li>
          <label
            className="a-label a-label__heading body-copy"
            htmlFor="company_received-from"
          >
            From
          </label>
          <div
            className="o-search-input"
          >
            <div
              className="o-search-input__input"
            >
              <input
                className="a-text-input"
                id="company_received-from"
                max="2020-05-05"
                min="2011-12-01"
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder="M/D/YYYY"
                type="date"
                value="Invalid Date"
              />
            </div>
          </div>
        </li>
        <li>
          <label
            className="a-label a-label__heading body-copy"
            htmlFor="company_received-through"
          >
            Through
          </label>
          <div
            className="o-search-input"
          >
            <div
              className="o-search-input__input"
            >
              <input
                className="a-text-input"
                id="company_received-through"
                max="2020-05-05"
                min="2011-12-01"
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder="M/D/YYYY"
                type="date"
                value="Invalid Date"
              />
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</section>
`;
